--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="shortcut icon"
-      href="assets/img/favicon.png"
+      href="assets/img/favicon.ico"
       type="image/x-icon"
     />
     <link
@@ -25,23 +25,23 @@
         <div class="nav__menu" id="nav-menu">
           <ul class="nav__list">
             <li>
-              <a href="#" class="nav__link">Home</a>
+              <a href="#home" class="nav__link">Home</a>
             </li>
 
             <li>
-              <a href="#" class="nav__link">O nas</a>
+              <a href="#about" class="nav__link">O nas</a>
             </li>
-
+<!-- 
             <li>
               <a href="#" class="nav__link">Kosmetyka</a>
+            </li> -->
+
+            <li>
+              <a href="#gallery" class="nav__link">Galeria</a>
             </li>
 
             <li>
-              <a href="#" class="nav__link">Fryzjerstwo</a>
-            </li>
-
-            <li>
-              <a href="#" class="nav__link">Kontakt</a>
+              <a href="#visit" class="nav__link">Kontakt</a>
             </li>
           </ul>
           <div class="nav__close" id="nav-close">
@@ -74,7 +74,7 @@
     </header>
 
     <main class="main">
-      <section class="home">
+      <section class="home" id="home">
         <div class="home__container">
           <div class="home__data">
             <h3 class="home__subtitle">Dolce Vita</h3>
@@ -86,7 +86,7 @@
                     Kosmetyka -<br />
                     Zabiegi na twarz i ciało
                   </h1>
-                  <a href="#" class="home__button">
+                  <a href="#" class="button">
                     Zobacz galerię <i class="ri-arrow-right-line"></i>
                   </a>
                 </div>
@@ -96,7 +96,7 @@
                     Paznokcie <br />
                     Maniquire i pediquire
                   </h1>
-                  <a href="#" class="home__button">
+                  <a href="#" class="button">
                     Buy Now <i class="ri-arrow-right-line"></i>
                   </a>
                 </div>
@@ -106,7 +106,7 @@
                     Fryzjerstwo <br />
                     Nowoczesne cięcia i koloryzacja
                   </h1>
-                  <a href="#" class="home__button">
+                  <a href="#" class="button">
                     Buy Now <i class="ri-arrow-right-line"></i>
                   </a>
                 </div>
@@ -120,32 +120,32 @@
                 <article class="home__article swiper-slide">
                   <div class="home__card">
                     <div class="home__circle home__circle-1"></div>
-                    <!--        <img
-                      src="assets/img/sneaker-1.png"
+                    <img
+                      src="assets/img/nails/nails-1.jpg"
                       alt="image"
                       class="home__img-1"
                     />
                     <img
-                      src="assets/img/sneaker-2.png"
+                      src="assets/img/nails/nails-2.jpg"
                       alt="image"
                       class="home__img-2"
-                    /> -->
+                    />
                   </div>
                 </article>
 
                 <article class="home__article swiper-slide">
                   <div class="home__card">
                     <div class="home__circle home__circle-2"></div>
-                    <!--          <img
-                      src="assets/img/sneaker-3.png"
+                    <img
+                      src="assets/img/nails/nails-1.jpg"
                       alt="image"
                       class="home__img-1"
                     />
                     <img
-                      src="assets/img/sneaker-4.png"
+                      src="assets/img/nails/nails-2.jpg"
                       alt="image"
                       class="home__img-2"
-                    /> -->
+                    />
                   </div>
                 </article>
 
@@ -162,16 +162,6 @@
                       alt="image"
                       class="home__img-2"
                     />
-                    <!--        <img
-                      src="assets/img/sneaker-5.png"
-                      alt="image"
-                      class="home__img-1"
-                    />
-                    <img
-                      src="assets/img/sneaker-6.png"
-                      alt="image"
-                      class="home__img-2"
-                    /> -->
                   </div>
                 </article>
               </div>
@@ -213,6 +203,208 @@
           </footer>
         </div>
       </section>
+
+      <section class="about section" id="about">
+        <h2 class="section__title">O nas</h2>
+
+      
+        </div>
+      </section>
+      
+
+      <section class="gallery section" id="gallery">
+        <h2 class="section__title">Nasze prace</h2>
+
+        <div class="gallery__container gallery container">
+          <div class="swiper" id="gallery-1">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <img src="assets/img/nails/nails-1.jpg" />
+              </div>
+              <div class="swiper-slide">
+                <img src="assets/img/hair/hair-1.jpg" />
+              </div>
+              <div class="swiper-slide">
+                <img src="assets/img/nails/nails-2.jpg" />
+              </div>
+              <div class="swiper-slide">
+                <img src="assets/img/hair/hair-2.jpg" />
+              </div>
+              <div class="swiper-slide">
+                <img src="assets/img/nails/nails-3.jpg" />
+              </div>
+              <div class="swiper-slide">
+                <img src="assets/img/hair/hair-3.jpg" />
+              </div>
+              <div class="swiper-slide">
+                <img src="assets/img/nails/nails-4.jpg" />
+              </div>
+              <div class="swiper-slide">
+                <img src="assets/img/nails/nails-5.jpg" />
+              </div>
+              <div class="swiper-slide">
+                <img src="assets/img/nails/nails-6.jpg" />
+              </div>
+              <div class="swiper-slide">
+                <img src="assets/img/nails/nails-7.jpg" />
+              </div>
+              <div class="swiper-slide">
+                <img src="assets/img/nails/nails-8.jpg" />
+              </div>
+              <div class="swiper-slide">
+                <img src="assets/img/nails/nails-9.jpg" />
+              </div>
+              <div class="swiper-slide">
+                <img src="assets/img/nails/nails-10.jpg" />
+              </div>
+              <div class="swiper-slide">
+                <img src="assets/img/nails/nails-11.jpg" />
+              </div>
+              <div class="swiper-slide">
+                <img src="assets/img/nails/nails-12.jpg" />
+              </div>
+              <div class="swiper-slide">
+                <img src="assets/img/nails/nails-13.jpg" />
+              </div>
+              <div class="swiper-slide">
+                <img src="assets/img/nails/nails-14.jpg" />
+              </div>
+              <div class="swiper-slide">
+                <img src="assets/img/nails/nails-15.jpg" />
+              </div>
+              <div class="swiper-slide">
+                <img src="assets/img/nails/nails-16.jpg" />
+              </div>
+              <div class="swiper-slide">
+                <img src="assets/img/nails/nails-17.jpg" />
+              </div>
+              <div class="swiper-slide">
+                <img src="assets/img/nails/nails-18.jpg" />
+              </div>
+              <div class="swiper-slide">
+                <img src="assets/img/nails/nails-19.jpg" />
+              </div>
+              <div class="swiper-slide">
+                <img src="assets/img/nails/nails-20.jpg" />
+              </div>
+              <div class="swiper-slide">
+                <img src="assets/img/nails/nails-21.jpg" />
+              </div>
+              <div class="swiper-slide">
+                <img src="assets/img/nails/nails-22.jpg" />
+              </div>
+              <div class="swiper-slide">
+                <img src="assets/img/nails/nails-23.jpg" />
+              </div>
+            </div>
+            <div class="swiper-pagination"></div>
+          </div>
+        </div>
+      </section>
+
+      <section class="visit section" id="visit">
+        <div class="visit__container">
+          <img src="assets/img/leaves.jpg" alt="image" class="visit__bg" />
+          <div class="visit__shadow"></div>
+
+          <div class="visit__content container">
+            <div class="visit__data">
+              <h2 class="section__title">Odwiedź nas!</h2>
+              <p class="visit__description">
+                Jana Kilińskiego 48<br />
+                41-200 Sosnowiec
+              </p>
+
+              <button class="button" id="iframeBtn">Zobacz na mapie<i class="ri-arrow-right-line"></i></button>
+            </div>
+            <div class="visit__iframe hidden" id="iframe">
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2549.602989826966!2d19.123227776821416!3d50.28067109957341!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4716daa3b5a7dd31%3A0xf6071e4b5dce5c63!2sStudio%20Urody%20Dolce%20Vita!5e0!3m2!1spl!2spl!4v1712582154819!5m2!1spl!2spl"
+                width="600"
+                height="450"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <footer class="footer">
+        <div class="footer__container container">
+ 
+
+          <div class="footer__content grid">
+            <div>
+              <a href="#" class="footer__logo">DolceVita</a>
+              <p class="footer__description">
+                Salon kosmetyczny <br />
+                i fryzjerski
+              </p>
+            </div>
+            <div>
+              <h3 class="footer__title">Adres</h3>
+
+              <ul class="footer__list">
+                <li>
+                  <address class="footer__info">
+                    Jana Kilińskiego 48<br />
+                    41-200 Sosnowiec
+                  </address>
+                </li>
+                <li>
+                  <address class="footer__info">Poniedziałek - Sobota</address>
+                </li>
+                <li>
+                  <address class="footer__info">10:00 - 20:00</address>
+                </li>
+              </ul>
+            </div>
+
+            <div>
+              <h3 class="footer__title">Kontakt</h3>
+
+              <ul class="footer__list">
+                <li>
+                  <address class="footer__info">+32 724 89 36</address>
+                </li>
+              </ul>
+            </div>
+
+            <div>
+              <h3 class="footer__title">Follow Us</h3>
+
+              <div class="home__social">
+                <a
+                  href="https://www.facebook.com/profile.php?id=100063484692447"
+                  target="_blank"
+                  class="home__social-link"
+                >
+                  <i class="ri-facebook-circle-line"></i>
+                </a>
+  
+                <a
+                  href="https://www.instagram.com/studiourodydolcevita/"
+                  target="_blank"
+                  class="home__social-link"
+                >
+                  <i class="ri-instagram-line"></i>
+                </a>
+              </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <span class="footer__copy">
+          &#169; Seahorse <span id="year"></span> All rigths reserved
+        </span>
+      </footer>
+      <a href="#" class="scrollup" id="scroll-up">
+        <i class="ri-arrow-up-line"></i>
+      </a>
     </main>
     <script src="assets/js/swiper-bundle.min.js"></script>
     <script src="assets/js/main.js"></script>
